# zcash-warp

./: .gitignore  App.toml  Cargo.toml  binding.h  build-android.sh  build.rs  cbindgen.toml
flatbuffers/: data.fbs  gen.sh
proto/: compact_formats.proto  service.proto
src/: account.rs  cli.rs  coin.rs  ctest.rs  data.rs  db.rs  ffi.rs  keys.rs  lib.rs  lwd.rs  main.rs  messages.rs  network.rs  pay.rs  tests.rs  txdetails.rs  types.rs  utils.rs  warp.rs
src/account/: address.rs  contacts.rs  pools.rs  txs.rs
src/db/: account.rs  account_manager.rs  chain.rs  contacts.rs  mempool.rs  messages.rs  migration.rs  notes.rs  swap.rs  tx.rs  witnesses.rs
src/pay/: builder.rs  conv.rs  fee.rs  prepare.rs  sweep.rs
src/tauri/: account.rs
src/utils/: chain.rs  data_split.rs  db.rs  keys.rs  messages.rs  pay.rs  tx.rs  ua.rs  uri.rs  zip_db.rs
src/warp/: decrypter.rs  edge.rs  hasher.rs  legacy.rs  mempool.rs  orchard.rs  sapling.rs  sync.rs
src/warp/sync/: builder.rs  header.rs  orchard.rs  sapling.rs  shielded.rs  transparent.rs
src/warp/sync/shielded/: orchard.rs  sapling.rs
