[package]
name = "zcash-warp"
version = "1.0.0"
edition = "2021"
authors = ["Hanh <hanh425@gmail.com>"]

[lib]
name = "zcash_warp"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
figment.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
prost.workspace = true
hex.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
lazy_static.workspace = true
parking_lot.workspace = true
rusqlite.workspace = true
flatbuffers.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-hex.workspace = true
serde_cbor.workspace = true
serde_bytes.workspace = true
serde_with.workspace = true
bincode.workspace = true
rand.workspace = true
clap.workspace = true
clap-repl.workspace = true
console.workspace = true
chrono.workspace = true
itertools.workspace = true
bip32.workspace = true

tiny-bip39 = "0.8"
tiny-hderive = "0.3.0"
base58check = "0.1.0"
secp256k1 = "0.27"
ripemd = "0.1.1"
sha2 = "0.10.2"
bech32 = "0.11.0"
orchard = "0.9.1"
group = "0.13.0"
jubjub = "0.10.0"
blake2b_simd = "1.0.0"
chacha20 = "0.9.0"
rayon = "1.5.1"
sapling-crypto = "0.2.0"
incrementalmerkletree = { version = "0.6.0", features = [ "legacy-api" ] }
halo2_proofs = "0.3.0"
halo2_gadgets = "0.3.0"
zip32 = "0.1.1"

flate2 = "1.0.32"
age = "0.10.0"
zip = "2.2.0"
raptorq = "2.0.0"

warp-macros = { path = "../warp-macros" }

zcash_keys.workspace = true
zcash_protocol.workspace = true
zcash_client_backend.workspace = true
zcash_primitives.workspace = true
zcash_proofs.workspace = true
zcash_address.workspace = true
zcash_encoding.workspace = true
zcash_note_encryption.workspace = true

[features]
#sqlcipher = ["rusqlite/bundled-sqlcipher-vendored-openssl"]
regtest = []

[build-dependencies]
tonic-build = { version = "0.12", features = [ "prost" ] }
cbindgen = "0.27.0"
