[package]
name = "zcash-warp"
version = "1.0.0"
edition = "2021"
authors = ["Hanh <hanh425@gmail.com>"]

[lib]
name = "zcash_warp"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
thiserror = "1.0.63"
anyhow = "1.0.86"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [ "env-filter" ] }
tokio = { version = "1.40", features = ["rt-multi-thread"] }
tokio-stream = "0.1.15"
tonic = { version = "0.12", features = ["tls", "tls-native-roots", "tls-webpki-roots"] }
tower = "0.4.13"
hyper = "1.4.1"
prost = "0.13"
hex = { version = "0.4", features = ["serde"] }
fpdec = "0.10.3"
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
lazy_static = "1.5"
parking_lot = "0.12.3"
rusqlite = { version = "0.29", features = [ "bundled-sqlcipher-vendored-openssl", "backup" ] }
flatbuffers = "24.3.25"
serde = "1.0.206"
serde_json = "1.0.124"
serde-hex = "0.1.0"
serde_cbor = "0.11.2"
serde_bytes = "0.11.15"
serde_with = "3.9.0"
bincode = "1.3.3"
rand = "0.8.4"
chrono = "0.4.38"
itertools = "0.13.0"
bip32 = "0.5.2"
tiny-bip39 = "0.8"
tiny-hderive = "0.3.0"
base58check = "0.1.0"
secp256k1 = "0.27"
ripemd = "0.1.1"
sha2 = "0.10.2"
bech32 = "0.11.0"
bs58 = "0.5.1"
orchard = "0.10.0"
group = "0.13.0"
jubjub = "0.10.0"
blake2b_simd = "1.0.0"
chacha20 = "0.9.0"
rayon = "1.5.1"
flate2 = "1.0.32"
age = "0.10.0"
zip = "2.2.0"
raptorq = "2.0.0"

sapling-crypto = "0.3.0"
incrementalmerkletree = { version = "0.6.0", features = [ "legacy-api" ] }
halo2_proofs = "0.3.0"
halo2_gadgets = "0.3.0"
zip32 = "0.1.1"

zcash_keys = { git = "https://github.com/hhanh00/librustzcash.git", rev = "be5fa0c7", features = ["sapling", "orchard", "test-dependencies"] }
zcash_protocol = { git = "https://github.com/hhanh00/librustzcash.git", rev = "be5fa0c7", features = ["local-consensus"] }
zcash_client_backend = { git = "https://github.com/hhanh00/librustzcash.git", rev = "be5fa0c7", features = [ "transparent-inputs", "orchard" ] }
zcash_primitives = { git = "https://github.com/hhanh00/librustzcash.git", rev = "be5fa0c7", features = [ "transparent-inputs" ] }
zcash_proofs = { git = "https://github.com/hhanh00/librustzcash.git", rev = "be5fa0c7", features = ["download-params"] }
zcash_address = { git = "https://github.com/hhanh00/librustzcash.git", rev = "be5fa0c7" }
zcash_encoding = { git = "https://github.com/hhanh00/librustzcash.git",  rev = "be5fa0c7" }
zcash_note_encryption = "0.4"

clap = { version = "4.5.16", features = ["derive"] }
clap-repl = "0.3.0"
console = "0.15.8"
figment = { version = "0.10.19", features = [ "env", "toml" ] }

[features]
sqlcipher = ["rusqlite/bundled-sqlcipher-vendored-openssl"]
regtest = []

[build-dependencies]
tonic-build = { version = "0.12", features = [ "prost" ] }

# [patch.crates-io]
# orchard = { git = "https://github.com/hhanh00/orchard.git", rev = "820a22e" }
